--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
+    "framer-motion": "^10.12.16",
     "material-icons": "^1.13.8",
     "next": "13.4.6",
     "react": "18.2.0",
