--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint-config-next": "13.4.6",
     "framer-motion": "^10.12.16",
     "material-icons": "^1.13.8",
-    "next": "13.4.6",
+    "next": "^13.4.7",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
