--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^13.4.9",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.32.1"
   }
 }
