--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
+# This environment variable sets the API host URL for the Next.js application.
+# It specifies the base URL for making API requests from the client-side JavaScript code
 NEXT_PUBLIC_API_HOST=https://fleetwise-api-wtuutl2vtq-el.a.run.app
